--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous">
-	<title>II WPEA</title>
+	<title>III WPEA</title>
 </head>
 <body>
 <!-- seta -->
@@ -27,16 +27,14 @@
 	<section class="sec1">
 		<span id="Apresentação"></span>
 		<p class="txt-0 apr">Apresentação</p>
-		<p class="txt-1">Os pesquisadores do Grupo de Pesquisa em Educação em Ciências e Educação Ambiental - GEPECEA, da Universidade Federal de Itajubá, propõem a realização do II Workshop “Pesquisa em Educação Ambiental". O evento ocorrerá entre 04 e 05 de dezembro de 2023, na cidade de Itajubá, e objetiva promover a discussão e a análise de fundamentos teóricos e metodológicos para a condução da pesquisa em EA. Com o propósito de enriquecer o evento, ampliando o diálogo e oferecendo oportunidades para a troca de experiências, o Workshop contará com a participação dos pesquisadores do Projeto de Pesquisa “Estado da Arte da Pesquisa em Educação Ambiental no Brasil: Análise de Teses e Dissertações” (Projeto EArte). Trata-se de um projeto de natureza interinstitucional cujo objetivo é o de caracterizar e compreender a trajetória histórica da Pesquisa em EA no Brasil, analisando teses e dissertações produzidas no período 1981-2023 e que tenham como foco a relação entre o processo educativo e a temática ambiental.</p>
+		<p class="txt-1">Os pesquisadores do Grupo de Pesquisa em Educação em Ciências e Educação Ambiental - GEPECEA, da Universidade Federal de Itajubá, propõem a realização do III Workshop “Pesquisa em Educação Ambiental". O evento ocorrerá nos dias 09, 10 e 11 de junho de 2025, na cidade de Itajubá, e objetiva promover a discussão e a análise de fundamentos teóricos e metodológicos para a condução da pesquisa em Educação Ambiental. Com o propósito de enriquecer o evento, ampliando o diálogo e oferecendo oportunidades para a troca de experiências, o Workshop contará com a participação dos pesquisadores do Projeto de Pesquisa “Estado da Arte da Pesquisa em Educação Ambiental no Brasil: Análise de Teses e Dissertações” (Projeto EArte). Trata-se de um projeto de natureza interinstitucional cujo objetivo é o de caracterizar e compreender a trajetória histórica da Pesquisa em EA no Brasil, analisando teses e dissertações produzidas no período 1981-2023 e que tenham como foco a relação entre o processo educativo e a temática ambiental.</p>
 	</section>
 	<section>
 		<span class="txt-0"></span>
 		<p class="txt-0">Comissão organizadora</p>
 		<p class="txt-2">Profa. Dra. Danielle Aparecida Reis Leite</p>
 		<p class="txt-2">Profa. Dra. Dayane dos Santos Silva</p>
-		<p class="txt-2">Profa. Dra. Janaina Roberta dos Santos</p>
-		<p class="txt-2">Prof. Dr. Luciano Fernandes Silva</p>
-		<p class="txt-2">Profa. Ma. Fabiana Mara de Oliveira</p>
+		<p class="txt-2">Prof. Dr. Victor Hugo de Oliveira Henrique</p>
 		<p class="txt-2">Prof. Me. Gabriel Lisboa de Melo</p>		
 	</section>
 	<section>
@@ -61,28 +59,32 @@
 
 <table id="table">
 	<tr>
-		<td colspan="2" class="txt-center">04/12 - Tarde/Noite (Local a definir)</td>
+		<td colspan="2" class="txt-center">09/06 - Noite (Local a definir)</td>
 	</tr>
 
 	<tr>
-		<td>14h30 às 15h</td>
-		<td>Abertura, objetivos e programação do Workshop</td>
+		<td>19h às 20h30</td>
+		<td>Atividade 1</td>
 	</tr>
-
 	<tr>
-		<td>15h às 17h30</td>
+		<td colspan="2" class="txt-center">10/06 - Manhã e Tarde (Local a definir)</td>
+	</tr>
+	<tr>
+		<td>08h às 12h</td>
 		<td>Oficina: "Estado da Arte da Pesquisa em Educação Ambiental no Brasil: projeto EArte"</td>
 	</tr>
 	<tr>
-		<td>17h30 às 18h</td>
+		<td>10h às 10h30</td>
 		<td>Coffee break</td>
 	</tr>
 	<tr>
-		<td>19h às 20h30</td>
-		<td>Roda de conversa “Educação em Ciências e Educação Ambiental”</td>
+		<td>14h às 17h30</td>
+		<td>Atividade 2</td>
 	</tr>
+	
+	
 	<tr>
-		<td colspan="2" class="txt-center">05/12 - Manhã (Local a definir)</td>
+		<td colspan="2" class="txt-center">11/06 - Manhã (Local a definir)</td>
 	</tr>
 	<tr>
 		<td>08h às 12h</td>
