--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<header id="header">
 		<img src="logo2.png" id="logo">
 		<img src="logo3.png" id="logo1">
-		<p id="title">II Workshop - Pesquisa em Educação Ambiental</p>
+		<p id="title">III Workshop - Pesquisa em Educação Ambiental</p>
 	</header>
 	
 	<section class="sec1">
