--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<navbar id="navbar">
 		<a href="#Apresentação" id="ppt-a">Apresentação</a>
 		<a href="#Convidados" id="ppt-c">Convidados</a>
-		<a href="https://forms.gle/fDrf3mDpZC6gdvbS9" target="_blank">Inscrição</a>		
+		<a href="" target="_blank">Inscrição</a>		
 	</navbar>
 	<span id="ppt"></span>
 	<header id="header">
