--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </section>
 
 	<footer>
-		<span class="txt-3">Realização:</span>
+		<span class="txt-3 ajuste1">Realização:</span>
 		<img id="unifei" src="unifei.png">
 		<span class="span-logo"><p class="txt-2 span-logo-txt">Grupo de Estudo e Pesquisa em Educação em Ciências e Educação Ambinetal</p><img id="unifei" src="logo-gepecea.png"></span>
 		<span class="txt-3">Parceria:</span>
