--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	
 	<navbar id="navbar">
 		<a href="#Apresentação" id="ppt-a">Apresentação</a>
-		<a href="#Convidados" id="ppt-c">Convidados</a>
-		<a href="" target="_blank">Inscrição</a>		
+		<a href="#Convidados" id="ppt-c">Convidados</a>	
 	</navbar>
 	<span id="ppt"></span>
 	<header id="header">
@@ -27,31 +26,18 @@
 	<section class="sec1">
 		<span id="Apresentação"></span>
 		<p class="txt-0 apr">Apresentação</p>
-		<p class="txt-1">Os pesquisadores do Grupo de Pesquisa em Educação em Ciências e Educação Ambiental - GEPECEA, da Universidade Federal de Itajubá, propõem a realização do III Workshop “Pesquisa em Educação Ambiental". O evento ocorrerá nos dias 09, 10 e 11 de junho de 2025, na cidade de Itajubá, e objetiva promover a discussão e a análise de fundamentos teóricos e metodológicos para a condução da pesquisa em Educação Ambiental. Com o propósito de enriquecer o evento, ampliando o diálogo e oferecendo oportunidades para a troca de experiências, o Workshop contará com a participação dos pesquisadores do Projeto de Pesquisa “Estado da Arte da Pesquisa em Educação Ambiental no Brasil: Análise de Teses e Dissertações” (Projeto EArte). Trata-se de um projeto de natureza interinstitucional cujo objetivo é o de caracterizar e compreender a trajetória histórica da Pesquisa em EA no Brasil, analisando teses e dissertações produzidas no período 1981-2023 e que tenham como foco a relação entre o processo educativo e a temática ambiental.</p>
-	</section>
-	<section>
-		<span class="txt-0"></span>
-		<p class="txt-0">Comissão organizadora</p>
-		<p class="txt-2">Profa. Dra. Danielle Aparecida Reis Leite</p>
-		<p class="txt-2">Profa. Dra. Dayane dos Santos Silva</p>
-		<p class="txt-2">Prof. Dr. Victor Hugo de Oliveira Henrique</p>
-		<p class="txt-2">Prof. Me. Gabriel Lisboa de Melo</p>		
+		<p class="txt-1">O “III Workshop Pesquisa em Educação Ambiental” será realizado entre os dias 9 e 11 de junho de 2025, na Universidade Federal de Itajubá (UNIFEI), sob organização de pesquisadores do Grupo de Pesquisa em Educação em Ciências e Educação Ambiental (GEPECEA/UNIFEI). Esse Workshop tem como objetivo promover a discussão e a análise de fundamentos teóricos e metodológicos para a condução da pesquisa em Educação Ambiental. Com o intuito de ampliar o diálogo e fomentar a troca de experiências, o Workshop contará com a participação de pesquisadores vinculados ao projeto interinstitucional “Estado da Arte da Pesquisa em Educação Ambiental no Brasil: Análise de Teses e Dissertações” (Projeto EArte). Trata-se de um projeto de natureza interinstitucional cujo objetivo é o de caracterizar e compreender a trajetória histórica da Pesquisa em EA no Brasil, analisando teses e dissertações produzidas no período 1981-2023 e que tenham como foco a relação entre o processo educativo e a temática ambiental.</p>
 	</section>
 	<section>
 		<span class="txt-0" id="Convidados"></span>
 		<p class="txt-0">Convidadas(os)</p>
-		<p class="txt-2">Profa. Dra. Juliana Rink - Unicamp</p>
-		<p class="txt-2">Prof. Dr. Luiz Marcelo de Carvalho - Unesp (Rio Claro)</p>
-		<p class="txt-2">Prof. Dr. Luiz Carlos Santana - Unesp (Rio Claro)</p>
-		<p class="txt-2">Profa. Dra. Rosa Maria Feiteiro Cavalari - Unesp (Rio Claro)</p>
-		<p class="txt-2">Prof. Dr. Wanderson de Morais - Unesp (Rio Claro)</p>
-		<p class="txt-2">Prof. Dr. Danilo Seithi Kato - UFTM</p>
-		<p class="txt-2">Prof. Dr. José Artur Barroso Fernandes - UFF</p>
-		<p class="txt-2">Profa. Ms. Laís de Souza Rédua - UEMG  </p>
-		<p class="txt-2">Doutorando Dieison Prestes da Silveira - UFPR</p>
-		<p class="txt-2">Doutorando Gabriel Lisboa de Melo - Unesp (Rio Claro)</p>
-		<p class="txt-2">Doutoranda Fernanda Sueko Ogawa - Unicamp</p>
-		<p class="txt-2">Ms. Rejane Leal Candido - UFTM</p>
+		<p class="txt-2">Profa. Dra. Dayane dos Santos Silva (URCA)</p>
+		<p class="txt-2">Prof. Dr. José Artur Barroso Fernandes (UFF)</p>
+		<p class="txt-2">Prof. Dr. Luiz Marcelo de Carvalho (Unesp)</p>
+		<p class="txt-2">Profa. Dra. Juliana Rink (Unicamp)</p>
+		<p class="txt-2">Doutorando Gabriel Lisboa de Melo (Unesp - Rio Claro)</p>
+		<p class="txt-2">Doutoranda Fernanda Sueko Ogawa (Unicamp)</p>
+		<p class="txt-2">Doutoranda Fabiana Mara de Oliveira (Unesp - Rio Claro)</p>
 	</section>
 	<section>
 		<span class="txt-0" id="Programação"></span>
@@ -59,7 +45,7 @@
 
 <table id="table">
 	<tr>
-		<td colspan="2" class="txt-center">09/06 - Noite (Local a definir)</td>
+		<td colspan="2" class="txt-center">09/06 - Noite (sala C2201 do IFQ)</td>
 	</tr>
 
 	<tr>
@@ -67,7 +53,7 @@
 		<td>Atividade 1</td>
 	</tr>
 	<tr>
-		<td colspan="2" class="txt-center">10/06 - Manhã e Tarde (Local a definir)</td>
+		<td colspan="2" class="txt-center">10/06 - Manhã e tarde (sala C2201 do IFQ)</td>
 	</tr>
 	<tr>
 		<td>08h às 12h</td>
@@ -84,7 +70,7 @@
 	
 	
 	<tr>
-		<td colspan="2" class="txt-center">11/06 - Manhã (Local a definir)</td>
+		<td colspan="2" class="txt-center">11/06 - Manhã (sala C2201 do IFQ)</td>
 	</tr>
 	<tr>
 		<td>08h às 12h</td>
@@ -95,7 +81,28 @@
 		<td>Coffee break</td>
 	</tr>
 </table>
-	
+<span class="txt-0"></span>
+	<section>
+		<span class="txt-0"></span>
+		<p class="txt-0">Coordenação Geral</p>
+		<p class="txt-2">Profa. Dra. Danielle Aparecida Reis Leite</p>
+		
+		<p class="txt-0">Equipe de apoio local</p>
+		<p class="txt-2">Prof. Dr. Wanderson Morais</p>
+		<p class="txt-2">Mestranda Raiany Eduarda Silva</p>
+		<p class="txt-2">Mestranda Maria Vitória de Paula Costa</p>
+		<p class="txt-2">Mestranda Ingrid Leite Andrade</p>
+		<p class="txt-2">Mestranda Giovanna Castro Leitão</p>
+		<p class="txt-2">Mestranda Julia Faillace</p>
+		<p class="txt-2">Mestranda Daniella Dias</p>
+		<p class="txt-2">Mestranda Ana Célia</p>
+		<p class="txt-2">Mestrando Gabriel Henrique dos Santos</p>
+				
+		<p class="txt-0">Equipe de Apoio Técnico</p>
+		<p class="txt-2">Profa. Dra. Dayane dos Santos Silva</p>
+		<p class="txt-2">Prof. Dr. Victor Hugo de Oliveira Henrique</p>
+		<p class="txt-2">Prof. Me. Gabriel Lisboa de Melo</p>		
+	</section>
 	<span class="txt-0"></span>
 	<p class="txt-0">Conheça a UNIFEI</p>
 	<div id="video"><a target="_blank" href="https://youtu.be/CTMnkpVv7Bo?list=PLDPk-D7YqyM5XwlM4lrVLWCV8duLlpiqt"><img src="unifei.jpg"></a></div>
