--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<navbar id="navbar">
 		<a href="#Apresentação" id="ppt-a">Apresentação</a>
-		<a href="#Convidados" id="ppt-c">Convidados</a>	
+		<a href="#Convidados" id="ppt-c">Convidadas(os)</a>	
 	</navbar>
 	<span id="ppt"></span>
 	<header id="header">
@@ -49,40 +49,63 @@
 	</tr>
 
 	<tr>
-		<td>19h às 20h30</td>
-		<td>Atividade 1</td>
+		<td>19h às 19h30</td>
+		<td>Abertura, objetivos e programação do Workshop</td>
+	</tr>
+	<tr>
+		<td>19h30 às 20h30</td>
+		<td>Atividade em pequenos grupos - classificação de teses e dissertações a partir da consulta aos textos completos</td>
 	</tr>
 	<tr>
 		<td colspan="2" class="txt-center">10/06 - Manhã e tarde (sala C2201 do IFQ)</td>
 	</tr>
 	<tr>
-		<td>08h às 12h</td>
-		<td>Oficina: "Estado da Arte da Pesquisa em Educação Ambiental no Brasil: projeto EArte"</td>
+		<td>09h às 10h30</td>
+		<td>Roda de conversa - socialização das discussões realizadas nos pequenos grupos</td>
 	</tr>
 	<tr>
-		<td>10h às 10h30</td>
+		<td>10h30 às 11h</td>
 		<td>Coffee break</td>
 	</tr>
 	<tr>
-		<td>14h às 17h30</td>
-		<td>Atividade 2</td>
+		<td>11h às 12h30</td>
+		<td>Elaboração de documento orientador para classificação de teses e dissertações a partir da consulta aos textos completos</td>
 	</tr>
-	
+	<tr>
+		<td>2:30h às 14h</td>
+		<td>Almoço</td>
+	</tr>
+	<tr>
+		<td>14h às 16h30</td>
+		<td>Análise e testes do site e banco de dados do projeto hospedado pelo servidor da FE da Unicamp</td>
+	</tr>
+	<tr>
+		<td>16h30 às 17h</td>
+		<td>Coffee break</td>
+	</tr>
+	<tr>
+		<td>17h às 19h</td>
+		<td>Análise e testes do site e banco de dados do projeto hospedado pelo servidor da FE da Unicamp</td>
+	</tr>
 	
 	<tr>
 		<td colspan="2" class="txt-center">11/06 - Manhã (sala C2201 do IFQ)</td>
 	</tr>
 	<tr>
-		<td>08h às 12h</td>
-		<td>Oficina: "Estado da Arte da Pesquisa em Educação Ambiental no Brasil: projeto EArte"</td>
+		<td>09h às 10h30</td>
+		<td>Testes com planilha de classificação - menu suspenso</td>
 	</tr>
 	<tr>
-		<td>10h às 10h30</td>
+		<td>10h30 às 11h</td>
 		<td>Coffee break</td>
+	</tr>
+	<tr>
+		<td>11h às 12h30</td>
+		<td>Plenária de encerramento e sistematização dos encaminhamentos para a equipe do projeto EArte</td>
 	</tr>
 </table>
 <span class="txt-0"></span>
-	<section>
+	<section >
 		<span class="txt-0"></span>
 		<p class="txt-0">Coordenação Geral</p>
 		<p class="txt-2">Profa. Dra. Danielle Aparecida Reis Leite</p>
