--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	</tr>
 	<tr>
 		<td>14h às 16h30</td>
-		<td>Análise e testes do site e banco de dados do projeto hospedado pelo servidor da FE da Unicamp</td>
+		<td>Análise e testes do site e banco de dados do projeto hospedado pelo servidor da Faculdade de Educação da Unicamp</td>
 	</tr>
 	<tr>
 		<td>16h30 às 17h</td>
